<resources>
    <string name="app_name">Cocktails</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_first_letter_of_cocktail">Enter first letter of cocktail!</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">CANCEL</string>
    <string name="success">SUCCESS</string>
    <string name="error">ERROR!</string>
    <string name="save">SAVE</string>
    <string name="enter_the_name_of_the_drink">Enter the name of the drink!</string>
    <string name="delete">DELETE</string>
    <string name="saved_data">Saved Data</string>
    <string name="instruction">Instruction:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="there_are_no_saved_cocktails">\"There are no saved cocktails! \"</string>
    <string name="deleted">DELETED</string>
    <string name="saved">SAVED</string>
    <string name="registration_form">Registration Form</string>
    <string name="registration">Registration</string>
    <string name="first_name_is_required">First name is required!</string>
    <string name="last_name_is_required">Last name is required!</string>
    <string name="age_is_required">Age is required!</string>
    <string name="email_is_required">Email is required!</string>
    <string name="password_is_required">Password is required!</string>
    <string name="repeat_password_is_required">Repeat password is required!</string>
    <string name="please_provide_valid_email">Please provide valid email!</string>
    <string name="min_password_length">Min password length should be 8 characters!</string>
    <string name="repeated_password_match_password">The repeated password must match the password!</string>
    <string name="enter_please_your_first_name">Enter please your first name!</string>
    <string name="enter_please_your_last_name">Enter please your last name!</string>
    <string name="enter_please_your_age">Enter please your age!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="success_registration">User has been registered successfully! Please verify your email!</string>
    <string name="failed_register">Failed to register! Try again!</string>
    <string name="cocktail_recipe">COCKTAIL RECIPE</string>
    <string name="email_address">Email address</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="successful_reset_link">Reset link set tp your email!</string>
    <string name="error_reset_link">Error! Reset link is not sent!</string>
    <string name="title_reset_password">Reset Password?</string>
    <string name="enter_your_reset_email">Enter your email to received reset link!</string>
    <string name="verification_email">Verification email has been sent.</string>
    <string name="email_verification_not_sent">Email not sent.</string>
    <string name="verify_your_email">Please verify your email!</string>
</resources>