<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/navigation_fragment_by_first_letter"
        android:name="by.zharikov.cocktails.ui.cocktailbyfirstletter.CocktailByFirstLetterFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_by_first_letter" >
        <action
            android:id="@+id/action_fragment_by_first_letter_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_navigation_fragment_by_first_letter_to_cocktailRecipeFragment"
            app:destination="@id/cocktailRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="by.zharikov.cocktails.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="by.zharikov.cocktails.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="by.zharikov.cocktails.ui.home.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_cocktailByIngredientFragment"
            app:destination="@id/cocktailByIngredientFragment" />
        <action
            android:id="@+id/action_homeFragment_to_navigation_fragment_by_first_letter"
            app:destination="@id/navigation_fragment_by_first_letter" />
        <action
            android:id="@+id/action_homeFragment_to_cocktailByNameFragment"
            app:destination="@id/cocktailByNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/cocktailByIngredientFragment"
        android:name="by.zharikov.cocktails.ui.cocktailbyingredient.CocktailByIngredientFragment"
        android:label="CocktailByIngredientFragment"
        tools:layout="@layout/fragment_by_ingredient">
        <action
            android:id="@+id/action_cocktailByIngredientFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/cocktailByNameFragment"
        android:name="by.zharikov.cocktails.ui.cocktailbyname.CocktailByNameFragment"
        android:label="CocktailByNameFragment"
        tools:layout="@layout/fragment_by_name_cocktail">
        <action
            android:id="@+id/action_cocktailByNameFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_cocktailByNameFragment_to_cocktailRecipeFragment"
            app:destination="@id/cocktailRecipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/cocktailRecipeFragment"
        android:name="by.zharikov.cocktails.ui.cocktailbyfirstletter.CocktailRecipeFragment"
        android:label="CocktailRecipeFragment"
        tools:layout="@layout/fragment_recipe"/>
</navigation>